redpanda.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redpanda
spec:
  serviceName: "redpanda"
  replicas: 1
  selector:
    matchLabels:
      app: redpanda
  template:
    metadata:
      labels:
        app: redpanda
    spec:
      containers:
      - name: redpanda
        image: docker.redpanda.com/redpandadata/redpanda:latest
        args:
        - start
        - --smp
        - "1"
        - --memory
        - 512M
        - --reserve-memory
        - 0M
        - --overprovisioned
        - --node-id
        - "0"
        ports:
        - containerPort: 9092
        - containerPort: 19092
        volumeMounts:
        - name: redpanda-data
          mountPath: /var/lib/redpanda/data
        resources:
          limits:
            memory: "700Mi"
  volumeClaimTemplates:
  - metadata:
      name: redpanda-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 5Gi
---
apiVersion: v1
kind: Service
metadata:
  name: redpanda
spec:
  selector:
    app: redpanda
  ports:
  - name: internal
    port: 9092
    targetPort: 9092
  - name: external
    port: 19092
    targetPort: 19092
