supabase-proxy.yaml
apiVersion: v1
kind: Service
metadata:
  name: supabase-kong
spec:
  ports:
    - port: 8000
      targetPort: 8001
---
apiVersion: v1
kind: Endpoints
metadata:
  name: supabase-kong
subsets:
  - addresses:
      - ip: 10.0.0.193
    ports:
      - port: 8001
