landing-page.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: landing-page
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: landing-page
  template:
    metadata:
      labels:
        app: landing-page
    spec:
      containers:
      - name: landing-page
        image: localhost:5000/landing-page:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: landing-page-service
  namespace: default
spec:
  selector:
    app: landing-page
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: landing-page-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: www.transhola.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: landing-page-service
            port:
              number: 80
